<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    tools:context=".SetUpInfo">

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_name"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:maxLines="1" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_select_your_circulatio"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <Spinner
        android:id="@+id/bluetooth_devices_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_circulatio_pin"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/enter_pin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:inputType="number"
        android:maxLength="20"
        android:maxLines="1" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="15"/>


    <CheckBox
        android:id="@+id/checkbox_user_manual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/confirm_checkbox"
        android:textColor="@color/grey"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_submit_setup_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@drawable/custom_button2"
        android:textColor="@color/white"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

</LinearLayout>