<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".InitialSetUp">

    <include
        android:id="@+id/include"
        layout="@layout/device_frame" />

    <TextView
        android:id="@+id/AddOnTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_on_readings"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/AddOnFrame"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddOnTitle"
        tools:ignore="OnClick,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/addOnButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border1"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/addOnConnect"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddOnTitle"/>

    <TextView
        android:id="@+id/yourPosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:layout_marginStart="20dp"
        android:text="Your position: "
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/AddOnFrame"
        app:layout_constraintStart_toStartOf="@+id/AddOnFrame"
        app:layout_constraintTop_toTopOf="@+id/AddOnFrame" />

    <ImageView
        android:id="@+id/manPositionImage"
        android:layout_width="101dp"
        android:layout_height="99dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/AddOnFrame"
        app:layout_constraintEnd_toEndOf="@+id/AddOnFrame"
        app:layout_constraintStart_toEndOf="@+id/yourPosition"
        app:layout_constraintTop_toTopOf="@+id/AddOnFrame"
        app:srcCompat="@drawable/man_standing_silhouette" />

    <Button
        android:id="@+id/btnStartMassage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_selector"
        android:paddingLeft="100dp"
        android:paddingTop="18dp"
        android:paddingRight="100dp"
        android:paddingBottom="18dp"
        android:text="@string/start_massage"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>